0.8.0/_sources/gallery/nD_labels.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/nD_labels.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_nD_labels.py:


nD labels
=========

Display a labels layer above of an image layer using the ``add_labels`` and
``add_image`` APIs

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 10-24



.. image-sg:: /gallery/images/sphx_glr_nD_labels_001.png
   :alt: nD labels
   :srcset: /gallery/images/sphx_glr_nD_labels_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    from scipy import ndimage as ndi
    from skimage import data

    import napari

    blobs = data.binary_blobs(length=128, volume_fraction=0.1, n_dim=3)
    viewer = napari.Viewer()
    layer = viewer.add_image(blobs[::2].astype(float), name='blobs', scale=(2, 1, 1))
    labeled = ndi.label(blobs)[0]
    viewer.add_labels(labeled[::2], name='blob ID', scale=(2, 1, 1))

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_nD_labels.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: nD_labels.ipynb <nD_labels.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: nD_labels.py <nD_labels.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: nD_labels.zip <nD_labels.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
